[package]
name = "checklist"
version = "0.1.0"
authors = ["Chris Galardi <christophergalardi@gmail.com>"]
edition = "2018"
license = "GPL V3"
readme = "README.md"
repository = "https://github.com/ixtli/checklist"
homepage = "https://github.com/ixtli/checklist"
categories = ["continuous-integration"]
description = "A continuous integration service."

[dependencies]
ansi_term = "0.11"
clap = "2.32.0"
